[DASHBOARD] Update pom.xml files