@@ -22,12 +22,15 @@
     </modules>
 
     <properties>
-        <java.ejb.version>3.2</java.ejb.version>
+        <!-- Project -->
+        <java.version>1.8</java.version>
+        <version.java.ee.api>7.0</version.java.ee.api>
+        <version.java.ejb>3.2</version.java.ejb>
+
+        <!-- Plugins -->
         <main.basedir>${project.basedir}</main.basedir>
-        <java.ee.api.version>7.0</java.ee.api.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
@@ -35,7 +38,7 @@
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
-                <version>${java.ee.api.version}</version>
+                <version>${version.java.ee.api}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -167,7 +170,7 @@
                     <artifactId>maven-ejb-plugin</artifactId>
                     <version>2.3</version>
                     <configuration>
-                        <ejbVersion>${java.ejb.version}</ejbVersion>
+                        <ejbVersion>${version.java.ejb}</ejbVersion>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -195,7 +198,7 @@
                                     <artifactItem>
                                         <groupId>javax</groupId>
                                         <artifactId>javaee-endorsed-api</artifactId>
-                                        <version>${java.ee.api.version}</version>
+                                        <version>${version.java.ee.api}</version>
                                         <type>jar</type>
                                     </artifactItem>
                                 </artifactItems>
@@ -224,6 +227,14 @@
                             </configuration>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                    <configuration>
+                        <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
